todo_app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - name: todo-server
      port: 2345
      protocol: TCP
      targetPort: 3000
    # - name: ping-pong
    #   port: 2346
    #   protocol: TCP
    #   targetPort: 3001
